# Geschwader

./: .gitignore  CMakeLists.txt  README.md  SocksServer.sln
CMakeBot/: CMakeBot.cpp  CMakeBot.h  CMakeLists.txt  ClientWG.cpp  ClientWG.h  GameState.cpp  GameState.h  Graphics.cpp  Graphics.h  JSONParser.cpp  JSONParser.h  Map.cpp  Map.h  Point.h  Tank.cpp  Tank.h  utility.cpp  utility.h
SocksServer/: Bot.h  ClientWG.cpp  ClientWG.h  Game.h  JSONParser.cpp  JSONParser.h  SocksServer.aps  SocksServer.cpp  SocksServer.rc  SocksServer.vcxproj  SocksServer.vcxproj.filters  resource.h
SocksServer/Debug/: SocksServer.exe.recipe  SocksServer.ilk  vc142.idb
SocksServer/Debug/SocksServer.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  SocksServer.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
SocksServer/Dependencies/: SocksServer.exe.recipe  SocksServer.ilk  vc142.idb
SocksServer/Dependencies/SocksServer.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  SocksServer.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
SocksServer/x64/Debug/: vc142.idb
SocksServer/x64/Debug/SocksServer.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  SocksServer.lastbuildstate
